# docs/openapi.yaml
@@ -115,6 +115,16 @@ components:
           type: boolean
           description: Whether the user is active or not
           example: true
+        createdAt:
+          type: string
+          format: date-time
+          description: The user's creation date
+          example: '2021-01-01T00:00:00.000Z'
+        updatedAt:
+          type: string
+          format: date-time
+          description: The user's update date
+          example: '2021-01-01T00:00:00.000Z'
     UserUpdateRequest:
       type: object
       properties:
@@ -145,12 +155,160 @@ components:
           type: string
           description: The user's password
           example: Very$ecureP@ssword
+    CategoryResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: The category's id
+          example: 1
+        name:
+          type: string
+          description: The category's name
+          example: Category 1
+        description:
+          type: string
+          description: The category's description
+          example: Category 1 description
+    CategoryRequest:
+      type: object
+      properties:
+        name:
+          type: string
+          description: The category's name
+          example: Category 1
+        description:
+          type: string
+          description: The category's description
+          example: Category 1 description
+    ProductResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: The product's id
+          example: 1
+        name:
+          type: string
+          description: The product's name
+          example: Product 1
+        description:
+          type: string
+          description: The product's description
+          example: Product 1 description
+        price:
+          type: number
+          description: The product's price
+          example: 10.99
+        reference:
+          type: string
+          description: The product's reference
+          example: REF-001
+        createdAt:
+          type: string
+          format: date-time
+          description: The user's creation date
+          example: '2021-01-01T00:00:00.000Z'
+        updatedAt:
+          type: string
+          format: date-time
+          description: The user's update date
+          example: '2021-01-01T00:00:00.000Z'
+        categories:
+          type: array
+          description: The product's categories
+          items:
+            schema:
+            $ref: '#/components/schemas/CategoryResponse'
+        components:
+          type: array
+          description: The product's components
+          items:
+            type: object
+            properties:
+              product:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    description: The component's product id
+                    example: 2
+                  name:
+                    type: string
+                    description: The component's product name
+                    example: Product 2
+                  description:
+                    type: string
+                    description: The component's product description
+                    example: Product 2 description
+                  price:
+                    type: number
+                    description: The component's product price
+                    example: 10.99
+                  reference:
+                    type: string
+                    description: The component's product reference
+                    example: REF-002
+                  createdAt:
+                    type: string
+                    format: date-time
+                    description: The user's creation date
+                    example: '2021-01-01T00:00:00.000Z'
+                  updatedAt:
+                    type: string
+                    format: date-time
+                    description: The user's update date
+                    example: '2021-01-01T00:00:00.000Z'
+              quantity:
+                type: integer
+                description: The quantity of the component
+                example: 3
+    ProductRequest:
+      type: object
+      properties:
+        name:
+          type: string
+          description: The product's name
+          example: Product 1
+        description:
+          type: string
+          description: The product's description
+          example: Product 1 description
+        price:
+          type: number
+          format: float
+          description: The product's price
+          example: 10.99
+        categories:
+          type: array
+          description: The product's category ids
+          items:
+            type: integer
+            example: 1
+        reference:
+          type: string
+          description: The product's reference
+          example: REF-001
+        components:
+          type: array
+          description: The product's components
+          items:
+            type: object
+            properties:
+              productId:
+                type: integer
+                description: The component's product id
+                example: 2
+              quantity:
+                type: integer
+                description: The quantity of the component
+                example: 3
 
 paths:
   /auth/login:
     post:
       tags:
-        - auth
+        - Auth
       summary: Login a user
       security:
         - basicAuth: []
@@ -170,7 +328,7 @@ paths:
   /auth/register:
     post:
       tags:
-        - auth
+        - Auth
       summary: Register a new user
       requestBody:
         required: true
@@ -188,7 +346,7 @@ paths:
   /auth/logout:
     delete:
       tags:
-        - auth
+        - Auth
       summary: Logout a user
       responses:
         200:
@@ -199,7 +357,7 @@ paths:
   /config:
     get:
       tags:
-        - config
+        - Config
       summary: Get all configurations
       responses:
         200:
@@ -219,7 +377,7 @@ paths:
           description: Internal server error
     put:
       tags:
-        - config
+        - Config
       summary: Update a configuration
       requestBody:
         required: true
@@ -244,7 +402,7 @@ paths:
   /users:
     get:
       tags:
-        - users
+        - Users
       summary: Get users with pagination and search
       parameters:
         - in: query
@@ -294,7 +452,7 @@ paths:
 
     post:
       tags:
-        - users
+        - Users
       summary: Create a user
       requestBody:
         required: true
@@ -305,6 +463,10 @@ paths:
       responses:
         201:
           description: User created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
         400:
           description: Invalid input
         500:
@@ -312,7 +474,7 @@ paths:
   /users/{id}:
     get:
       tags:
-        - users
+        - Users
       summary: Get a user by id
       parameters:
         - in: path
@@ -336,7 +498,7 @@ paths:
           description: Internal server error
     put:
       tags:
-        - users
+        - Users
       summary: Update a user
       parameters:
         - in: path
@@ -354,6 +516,10 @@ paths:
       responses:
         200:
           description: User updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
         400:
           description: Invalid input
         404:
@@ -363,7 +529,7 @@ paths:
   /users/{id}/credentials:
     put:
       tags:
-        - users
+        - Users
       summary: Update user's email or password
       parameters:
         - in: path
@@ -381,9 +547,236 @@ paths:
       responses:
         200:
           description: Credentials updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
         400:
           description: Invalid input
         404:
           description: User not found
+        500:
+          description: Internal server error
+  /products/categories:
+    get:
+      tags:
+        - Product categories
+      summary: Get all categories
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CategoryResponse'
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
+        500:
+          description: Internal server error
+    post:
+      tags:
+        - Product categories
+      summary: Create a category
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CategoryRequest'
+      responses:
+        201:
+          description: Category created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CategoryResponse'
+        400:
+          description: Invalid input
+        500:
+          description: Internal server error
+  /products/categories/{id}:
+    put:
+      tags:
+        - Product categories
+      summary: Update a category
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Category ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CategoryRequest'
+      responses:
+        200:
+          description: Category updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CategoryResponse'
+        400:
+          description: Invalid input
+        404:
+          description: Category not found
+        500:
+          description: Internal server error
+    delete:
+      tags:
+        - Product categories
+      summary: Delete a category
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Category ID
+      responses:
+        200:
+          description: Category deleted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CategoryResponse'
+        400:
+          description: Invalid input
+        404:
+          description: Category not found
+        500:
+          description: Internal server error
+  /products:
+    get:
+      tags:
+        - Products
+      summary: Get products with pagination and search
+      parameters:
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 10
+          description: Limit number of products returned
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 1
+          description: The current page number for results
+        - in: query
+          name: search
+          schema:
+            type: string
+          description: Search term to filter products by name
+        - in: query
+          name: category
+          schema:
+            type: integer
+          description: Category id to filter products by category
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/ProductResponse'
+                  nextPage:
+                    type: integer
+                    nullable: true
+                  prevPage:
+                    type: integer
+                    nullable: true
+        400:
+          description: Invalid input
+        500:
+          description: Internal server error
+    post:
+      tags:
+        - Products
+      summary: Create a product
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProductRequest'
+      responses:
+        201:
+          description: Product created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductResponse'
+        400:
+          description: Invalid input
+        500:
+          description: Internal server error
+
+  /products/{id}:
+    get:
+      tags:
+        - Products
+      summary: Get a product by id
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Product ID
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductResponse'
+        400:
+          description: Invalid input
+        404:
+          description: Product not found
+        500:
+          description: Internal server error
+    put:
+      tags:
+        - Products
+      summary: Update a product
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: Product ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProductRequest'
+      responses:
+        200:
+          description: Product updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductResponse'
+        400:
+          description: Invalid input
+        404:
+          description: Product not found
         500:
           description: Internal server error
